--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.0.15",
     "@types/morgan": "^1.7.35",
+    "@types/superagent": "^3.8.0",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.0",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   }
 }
