--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,20 @@
 
 {
   "compilerOptions": {
-    "lib": [ "es2015" ]
-  }
+    "module": "commonjs",
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "lib": [ "es2015", "dom" ],
+    "outDir": "dist",
+    "rootDir": ".",
+    "sourceMap": false
+  },
+  "include": [
+    "**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
 
