--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
     "superagent": "^3.8.3"
@@ -37,6 +38,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
+    "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.0.15",
     "@types/morgan": "^1.7.35",
     "@types/superagent": "^3.8.0",
