--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "removeComments": true,
     "preserveConstEnums": true,
-    "lib": [ "es2015", "dom" ],
+    "lib": [ "es2017", "esnext", "esnext.asynciterable","dom" ],
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": false
