--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/cheerio": "^0.22.7",
     "@types/compression": "0.0.36",
+    "@types/debug": "0.0.30",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.16.0",
