--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
     "mongoose": "^5.1.4",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.0",
     "superagent": "^3.8.3"
   },
@@ -41,6 +42,7 @@
     "@types/express": "^4.16.0",
     "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.0.15",
+    "@types/mongoose-auto-increment": "^5.0.30",
     "@types/morgan": "^1.7.35",
     "@types/superagent": "^3.8.0",
     "nodemon": "^1.17.5",
