--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mongoose": "^5.1.4",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "swagger-ui-express": "^3.0.9",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -43,6 +45,7 @@
     "@types/mongoose-auto-increment": "^5.0.30",
     "@types/morgan": "^1.7.35",
     "@types/superagent": "^3.8.0",
+    "@types/yamljs": "^0.2.30",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.0",
     "tslint": "^5.10.0",
