--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.7.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-actuator": "^1.1.0",
     "express-validator": "^5.2.0",
     "mongoose": "^5.1.4",
     "mongoose-auto-increment": "^5.0.1",
