--- a/api.yaml
+++ b/api.yaml
@@ -196,6 +196,8 @@ paths:
       summary: send crawl job to system.
       description: send crawl job request to system.
       consumes: [application/x-www-form-urlencoded]
+      security:
+        - basicAuth: []
       parameters:
         - name: year
           in: formData
@@ -219,7 +221,8 @@ paths:
                 type: string
               year:
                 type: string
-          
+        401:
+          $ref: '#/responses/Standard401ErrorResponse'
         500:
           $ref: '#/responses/Standard500ErrorResponse'
       tags: [Crawler]
@@ -527,3 +530,13 @@ responses:
     description: Object not found.
     schema:
       $ref: '#/definitions/Error'
+
+  Standard401ErrorResponse:
+    description: Authentication information is missing or invalid
+    headers:
+      WWW_Authenticate:
+        type: string
+
+securityDefinitions:
+  basicAuth:
+    type: basic
