--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.1.4",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "superagent": "^3.8.3",
     "swagger-ui-express": "^3.0.9",
