--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.2",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-actuator": "^1.1.0",
@@ -45,6 +46,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/cheerio": "^0.22.7",
     "@types/compression": "0.0.36",
+    "@types/cors": "^2.8.4",
     "@types/debug": "0.0.30",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
