--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 ENV=development
 AI3_ACCOUNT_USERNAME=ai3_username
 AI3_ACCOUNT_PASSWORD=ai3_password
-MONGO_CONNECTION=mongodb://localhost/nimjs
+MONGO_URL=mongodb://localhost/nimjs
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
