--- a/api.yaml
+++ b/api.yaml
@@ -11,84 +11,6 @@ schemes:
 basePath: /api/v1
 
 paths:
-  /faculties:
-    get:
-      summary: get all faculties.
-      description: get all known faculties in ITB.
-      responses:
-        200:
-          description: success, give list of all known faculties in ITB.
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Faculty'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Faculty]
-
-  /faculties/{id}:
-    get:
-      summary: get faculty detail.
-      description: get specific faculty information detail based on its id.
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: the faculty id.
-          type: string
-      responses:
-        200:
-          description: success, give detail of specific faculty with the id.
-          schema:
-            $ref: '#/definitions/Faculty'
-        404:
-          $ref: '#/responses/Standard404ErrorResponse'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Faculty]
-
-  /majors/{id}/faculty:
-    get:
-      summary: get faculty detail.
-      description: get specific faculty information detail of major's faculty with given id.
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: the major id.
-          type: string
-      responses:
-        200:
-          description: success, give detail of specific faculty of major with the given id.
-          schema:
-            $ref: '#/definitions/Faculty'
-        404:
-          $ref: '#/responses/Standard404ErrorResponse'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Faculty, Major]
-
-  /students/{id}/faculty:
-    get:
-      summary: get faculty detail.
-      description: get specific faculty information detail of student's faculty with given id.
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: the student id.
-          type: string
-      responses:
-        200:
-          description: success, give detail of specific faculty of student with the given id.
-          schema:
-            $ref: '#/definitions/Faculty'
-        404:
-          $ref: '#/responses/Standard404ErrorResponse'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Faculty, Student]
-
 
   /majors:
     get:
@@ -104,30 +26,6 @@ paths:
         500:
           $ref: '#/responses/Standard500ErrorResponse'
       tags: [Major]
-
-
-  /faculties/{id}/majors:
-    get:
-      summary: get all majors in a faculty
-      description: get all known majors that belong to a faculty.
-      parameters:
-        - name: id
-          required: true
-          in: path
-          description: the faculty id.
-          type: string
-      responses:
-        200:
-          description: success, give list of all known majors in specific faculty.
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Major'
-        404:
-          $ref: '#/responses/Standard404ErrorResponse'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Faculty, Major]
 
   /majors/{id}:
     get:
@@ -269,7 +167,7 @@ paths:
           type: number
         - name: code
           in: formData
-          description: major or faculty code. System will crawl all students that belong to this major or faculty.
+          description: major code. System will crawl all students that belong to this major.
           type: string
       responses:
         400:
@@ -290,45 +188,6 @@ paths:
         500:
           $ref: '#/responses/Standard500ErrorResponse'
       tags: [Crawler]
-
-  /searchers/faculties:
-    get:
-      summary: search faculties.
-      description: search all faculties that matching the given keyword. The result could be very large and divided into several page.
-      parameters:
-        - name: page
-          in: query
-          description: the page number.
-          type: number
-          default: 1
-        - name: count
-          in: query
-          description: the number of item per page.
-          type: number
-          default: 30
-        - name: keyword
-          in: query
-          required: true
-          description: the query keyword
-          type: string
-      responses:
-        400:
-          description: validation error, the input may contain invalid data.
-        404:
-          $ref: '#/responses/Standard404ErrorResponse'
-        200:
-          description: success, give information about all faculties that match the keyword.
-          schema:
-            properties:
-              pagination:
-                $ref: '#/definitions/Pagination'
-              payload:
-                type: array
-                items:
-                  $ref: '#/definitions/Faculty'
-        500:
-          $ref: '#/responses/Standard500ErrorResponse'
-      tags: [Searcher]
 
   /searchers/majors:
     get:
@@ -409,32 +268,12 @@ paths:
       tags: [Searcher]
 
 definitions:
-  Faculty:
-    required:
-      - id
-      - code
-      - name
-    properties:
-      id:
-        type: string
-        description: faculty's id.
-      code:
-        type: string
-        description: faculty's three digit code.
-      name:
-        type: string
-        description: faculty's name.
-    example:
-      id: 5b1b9ca8253adb543bbf84c1
-      code: 135
-      name: Teknik Informatika
 
   Major:
     required:
       - id
       - code
       - name
-      - faculty
     properties:
       id:
         type: string
@@ -445,14 +284,10 @@ definitions:
       name:
         type: string
         description: major's name.
-      faculty:
-        $ref: '#/definitions/Faculty'
-        description: faculty's id of faculty that the major belong to.
     example:
       id: 5b1b9ca8253adb543bbf84c2
       code: 165
       name: Sekolah Teknik Elektro dan Informatika
-      faculty: 5b1b9ca8253adb543bbf84c1
 
   Student:
     required:
@@ -460,11 +295,8 @@ definitions:
       - username
       - ai3Email
       - email
-      - tpbNim
-      - nim
       - name
-      - major
-      - faculty
+      - majors
     properties:
       id: 
         type: string
@@ -480,31 +312,29 @@ definitions:
         type: string
         format: email
         description: student's email.
-      tpbNim:
-        type: string
-        description: student's nim when TPB.
-      nim:
-        type: string
-        description: student's current used nim.
       name:
         type: string
         description: student's name.
-      major:
+      majors:
         $ref: '#/definitions/Major'
         description: major's id of major that the student belong to.
-      faculty:
-        $ref: '#/definitions/Faculty'
-        description: faculty's id of faculty that the student belong to.
     example:
       id: 5b1b9ca8253adb543bbf84c3
       username: jauhararifin
       ai3Email: jauhararifin@students.itb.ac.id
       email: jauhararifin10@gmail.com
-      tpbNim: 16515317
-      nim: 13515049
-      name: Sekolah Teknik Elektro dan Informatika
-      major: 5b1b9ca8253adb543bbf84c2
-      faculty: 5b1b9ca8253adb543bbf84c1
+      name: Jauhar Arifin
+      majors:
+        - nim: 16515049
+          major:
+            id: 5b1b9ca8253adb543bbf84c4
+            name: Sekolah Teknik Elektro dan Informatika
+            code: 165
+        - nim: 13515049
+          major:
+            id: 5b1b9ca8253adb543bbf84c5
+            name: Teknik Informatika
+            code: 135
 
   Log:
     required:
@@ -523,7 +353,7 @@ definitions:
         description: log's order. Smaller number indicate earlier log than bigger number.
       type:
         type: string
-        enum: [faculty, major, student]
+        enum: [major, student]
         description: log's type. This type indicate payload data type.
       issuedAt:
         type: string
@@ -547,11 +377,18 @@ definitions:
         username: jauhararifin
         ai3Email: jauhararifin@students.itb.ac.id
         email: jauhararifin10@gmail.com
-        tpbNim: 16515317
-        nim: 13515049
-        name: Sekolah Teknik Elektro dan Informatika
-        major: 5b1b9ca8253adb543bbf84c2
-        faculty: 5b1b9ca8253adb543bbf84c1
+        name: Jauhar Arifin
+        majors:
+          - nim: 16515049
+            major:
+              id: 5b1b9ca8253adb543bbf84c4
+              name: Sekolah Teknik Elektro dan Informatika
+              code: 165
+          - nim: 13515049
+            major:
+              id: 5b1b9ca8253adb543bbf84c5
+              name: Teknik Informatika
+              code: 135
 
   Pagination:
     type: object
